--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Asia/Seoul
 
 title: devlog # the main title
 
-tagline: A SWE Blog # it will display as the subtitle
+tagline: nara's github devlog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  nara's github devlog
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
