--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,12 @@ social_preview_image: /assets/img/favicons/profileimage.png # string, local or C
 # boolean type, the global switch for TOC in posts.
 toc: true
 
+# diagram generation tool
+mermaid: true
+
+# math equation tool
+math: true
+
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
   provider: # [disqus | utterances | giscus]
